[package]
name = "solana-bpf-loader-program"
description = "Solana BPF loader"
documentation = "https://docs.rs/solana-bpf-loader-program"
version = "2.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
log = "0.4.22"
scopeguard = "1.2.0"
solana-account-info = { path = "solana-program-runtime/solana-sdk/solana-program/solana-account-info", version = "=2.1.0" }
solana-bn254 = "=2.1.0"
solana-compute-budget = "=2.1.0"
solana-curve25519 = "=2.1.0"
solana-feature-set = "=2.1.0"
solana-log-collector = "=2.1.0"
solana-measure = { path = "solana-program-runtime/solana-measure", version = "=2.1.0" }
solana-poseidon = "=2.1.0"
solana-program-memory = "=2.1.0"
solana-program-runtime = { path = "solana-program-runtime", version = "=2.1.0" }
solana-sdk = { path = "solana-program-runtime/solana-sdk", version = "=2.1.0" }
solana-stable-layout = { path = "solana-program-runtime/solana-sdk/solana-program/solana-stable-layout", version = "=2.1.0" }
solana-timings = "=2.1.0"
solana-type-overrides = "=2.1.0"
solana_rbpf = "=0.8.5"
thiserror = "1.0.65"

[dev-dependencies]
assert_matches = "1.5.0"
memoffset = "0.9"
solana-sdk = {  path = "solana-program-runtime/solana-sdk", version = "=2.1.0", features = ["dev-context-only-utils"] }
solana-vote = { version = "=2.1.0", features = ["dev-context-only-utils"] }
test-case = "3.3.1"

[lib]
crate-type = ["lib"]
name = "solana_bpf_loader_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
shuttle-test = [
    "solana-type-overrides/shuttle-test",
    "solana-program-runtime/shuttle-test",
    "solana_rbpf/shuttle-test"
]

[patch.crates-io]
solana-measure = { path = "solana-program-runtime/solana-measure", version = "=2.1.0" }
solana-program-runtime = { path = "solana-program-runtime", version = "=2.1.0" }
solana-sdk = { path = "solana-program-runtime/solana-sdk", version = "=2.1.0" }
solana-program = { path = "solana-program-runtime/solana-sdk/solana-program", version = "=2.1.0" }
solana-stable-layout = { path = "solana-program-runtime/solana-sdk/solana-program/solana-stable-layout", version = "=2.1.0" }
solana-account-info = { path = "solana-program-runtime/solana-sdk/solana-program/solana-account-info", version = "=2.1.0" }